@startuml
set namespaceSeparator ::

' <widgets>

class "corriol_app::widgets::card_widget.dart::CardWidget" {
  +String imagePath
  +String text
  +Color background
  +Color foreground
  +Widget page
  +Widget build()
}

"corriol_app::widgets::card_widget.dart::CardWidget" o-- "dart::ui::Color"
"corriol_app::widgets::card_widget.dart::CardWidget" o-- "flutter::src::widgets::framework.dart::Widget"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::card_widget.dart::CardWidget"

class "corriol_app::widgets::legend_pie_chart_widget.dart::LegendPieChartWidget" {
  +String text
  +MaterialColor color
  +Widget build()
}

"corriol_app::widgets::legend_pie_chart_widget.dart::LegendPieChartWidget" o-- "flutter::src::material::colors.dart::MaterialColor"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::legend_pie_chart_widget.dart::LegendPieChartWidget"

class "corriol_app::widgets::records_pie_chart_widget.dart::RecordsPieChartWidget" {
  +Species species
  +Widget build()
}

"corriol_app::widgets::records_pie_chart_widget.dart::RecordsPieChartWidget" o-- "corriol_app::utils::constants.dart::Species"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::records_pie_chart_widget.dart::RecordsPieChartWidget"

class "corriol_app::widgets::pdf_viewer_widget.dart::PdfViewerWidget" {
  +String path
  +String title
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::pdf_viewer_widget.dart::PdfViewerWidget"

class "corriol_app::widgets::report_marker_widget.dart::ReportMarkerWidget" {
  +ReportModel report
  +Widget build()
}

"corriol_app::widgets::report_marker_widget.dart::ReportMarkerWidget" o-- "corriol_app::models::report_model.dart::ReportModel"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::report_marker_widget.dart::ReportMarkerWidget"

' <forms>

class "corriol_app::widgets::forms::my_text_form_widget.dart::MyTextFormWidget" {
  +TextEditingController controller
  +String hintText
  +bool obscureText
  +Icon prefixIcon
  +Widget build()
}

"corriol_app::widgets::forms::my_text_form_widget.dart::MyTextFormWidget" o-- "flutter::src::widgets::editable_text.dart::TextEditingController"
"corriol_app::widgets::forms::my_text_form_widget.dart::MyTextFormWidget" o-- "flutter::src::widgets::icon.dart::Icon"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::forms::my_text_form_widget.dart::MyTextFormWidget"

' <button>

class "corriol_app::widgets::buttons::sso_button_widget.dart::SSOButtonWidget" {
  +String svgPath
  +dynamic Function()? onTap
  +Widget build()
}

"corriol_app::widgets::buttons::sso_button_widget.dart::SSOButtonWidget" o-- "null::dynamic Function()"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::buttons::sso_button_widget.dart::SSOButtonWidget"

class "corriol_app::widgets::buttons::map_button_widget.dart::MapButtonWidget" {
  +State<MapButtonWidget> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "corriol_app::widgets::buttons::map_button_widget.dart::MapButtonWidget"

class "corriol_app::widgets::buttons::map_button_widget.dart::_MapButtonWidgetState" {
  +UserProvider provider
  +ValueNotifier<String> addressNotifier
  +void initState()
  -dynamic _fetchPositionAndAddress()
  +Widget build()
}

"corriol_app::widgets::buttons::map_button_widget.dart::_MapButtonWidgetState" o-- "corriol_app::providers::user_provider.dart::UserProvider"
"corriol_app::widgets::buttons::map_button_widget.dart::_MapButtonWidgetState" o-- "flutter::src::foundation::change_notifier.dart::ValueNotifier<String>"
"flutter::src::widgets::framework.dart::State" <|-- "corriol_app::widgets::buttons::map_button_widget.dart::_MapButtonWidgetState"

class "corriol_app::widgets::buttons::card_button_widget.dart::CardButtonWidget" {
  +String text
  +List<ReportModel> reports
  +int index
  +Color getBackgroundColor()
  +Color getForegroundColor()
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "corriol_app::widgets::buttons::card_button_widget.dart::CardButtonWidget"

class "corriol_app::widgets::buttons::counter_button_widget.dart::CounterButtonWidget" {
  +String hint
  +AssetImage image
  +void Function(int) onChanged
  +State<CounterButtonWidget> createState()
}

"corriol_app::widgets::buttons::counter_button_widget.dart::CounterButtonWidget" o-- "flutter::src::painting::image_resolution.dart::AssetImage"
"corriol_app::widgets::buttons::counter_button_widget.dart::CounterButtonWidget" o-- "flutter::src::foundation::basic_types.dart::void Function(int)"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "corriol_app::widgets::buttons::counter_button_widget.dart::CounterButtonWidget"

class "corriol_app::widgets::buttons::counter_button_widget.dart::_CounterButtonWidgetState" {
  -int _count
  -void _increment()
  -void _decrement()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "corriol_app::widgets::buttons::counter_button_widget.dart::_CounterButtonWidgetState"

class "corriol_app::widgets::buttons::dropdown_button_widget.dart::DropdownButtonWidget" {
  +List<dynamic> itemsList
  +String hint
  +void Function(String) onChanged
  +State<DropdownButtonWidget> createState()
}

"corriol_app::widgets::buttons::dropdown_button_widget.dart::DropdownButtonWidget" o-- "flutter::src::foundation::basic_types.dart::void Function(String)"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "corriol_app::widgets::buttons::dropdown_button_widget.dart::DropdownButtonWidget"

class "corriol_app::widgets::buttons::dropdown_button_widget.dart::_DropdownButtonWidgetState" {
  -String? _valueChoose
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "corriol_app::widgets::buttons::dropdown_button_widget.dart::_DropdownButtonWidgetState"

@enduml